--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "SET NODE_ENV=dev&& nodemon server.js",
-    "migration:generate": "typeorm migration:generate -d  ./config/migration.config.js -o ./database/migrations/migration -t true"
+    "migration:generate": "typeorm migration:generate -d  ./config/migration.config.js -o ./database/migrations/migration -t true",
+    "migration:up": "typeorm migration:run -d ./config/migration.config.js"
   },
   "repository": {
     "type": "git",
